--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_DATA = "https://connecteam.com/static/frontend-home-task/data/"
 REACT_APP_IMG = "https://connecteam.com/static/frontend-home-task/jpg/"
+REACT_APP_ICON = "https://connecteam.com/static/frontend-home-task/svg/"
